Update font and ratio index.html

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     #card-stack .card {
       width: 260px;
-      aspect-ratio: 3 / 4;
+      aspect-ratio: 3 / 3.5;
       height: auto;
     }
 
@@ -85,7 +85,7 @@
       z-index: 1;
     }
 
-    .card-title { font-weight: bold; font-size: 1.5rem; margin-bottom: 6px; }
+    .card-title { font-weight: bold; font-size: 1.1rem; margin-bottom: 6px; }
     .card-desc  { font-size: 0.9rem; opacity: 0.85; }
 
     .card::before,
@@ -166,8 +166,8 @@
     }
 
     .pile .card-title {
-      font-size: 0.9rem;
-      font-weight: bold;
+      font-size: 0.7rem;
+      font-weight: regular;
     }
 
     .top-bar {
