--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Value Card Sort</title>
+  <title>Skills Card Sort</title>
   <style>
     html { font-size: 1rem; }
     body {
