--- a/index.html
+++ b/index.html
@@ -158,8 +158,10 @@
       align-items: center;
       justify-content: center;
       text-align: center;
-      word-wrap: break-word;
-      hyphens: auto;
+      word-wrap: normal;
+      overflow-wrap: normal;
+      hyphens: none;
+      white-space: normal;
       background: #F2E1C2;
       border-radius: 12px;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
